--- a/src/components/first-section.module.css
+++ b/src/components/first-section.module.css
@@ -1,3 +1,24 @@
-.firstsection p{
+.mainText{
     font-size: 60px;
+}
+
+.greeting{
+height: 50vh;
+}
+
+.clinique{
+    padding: 0 50px 0 50px ;
+    height: 50vh;
+    background-color: lightblue;
+    display: flex;
+    justify-content:center;
+    flex-direction: row;
+}
+.clinique img{
+    width: 300px;
+    height: 300px;
+}
+.clinique p{
+    width: 300px;
+    height: 300px;
 }
