--- a/src/components/first-section.module.css
+++ b/src/components/first-section.module.css
@@ -1,24 +1,45 @@
-.mainText{
-    font-size: 60px;
+.mainText {
+  font-size: 60px;
+  color: var(--main-color);
+  text-shadow: 2px 2px 2px black;
+  margin: 0;
 }
 
-.greeting{
-height: 50vh;
+.greeting {
+  height: 50vh;
+  text-align: center;
+  background-image: url('../img/background.jpeg');
+  background-position: top;
+  background-size: cover;
+}
+.greeting button{
+  margin-top: 150px;
+  background-color: var(--main-color);
+  color: black;
 }
 
-.clinique{
-    padding: 0 50px 0 50px ;
-    height: 50vh;
-    background-color: lightblue;
-    display: flex;
-    justify-content:center;
-    flex-direction: row;
+.clinique {
+  padding: 0 50px 0 50px;
+  height: 50vh;
+  background-color: lightblue;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
 }
-.clinique img{
-    width: 300px;
-    height: 300px;
+
+.clinique img {
+  border-radius: 25px;
+  margin-top: 20px;
+  width: 300px;
+  height: 300px;
 }
-.clinique p{
-    width: 300px;
-    height: 300px;
+
+.clinique p {
+  padding: 5px;
+  border: 2px solid var(--main-color);
+  border-radius: 25px;
+  margin-left: 20px;
+  width: 350px;
+  height: 300px;
+  font-size: 20px;
 }
