--- a/src/components/second-section.module.css
+++ b/src/components/second-section.module.css
@@ -1,14 +1,34 @@
 .secondSection{
     padding: 0 20px;
+    text-align: center;
+    margin-bottom: 30px;
+   
 }
-
+.secondSection button{
+    margin-top: 10px;
+}
 .cardsWrapper{
     display: flex;
     flex-direction: row;    
     justify-content: space-around;
+    margin-bottom: 20px
 }
 .serviceCard{
-    width: 150px;
-    height: 150px;
+    position: relative;
+    padding: 5px;
+    width: 200px;
+    height: 200px;
+    border: 1px solid lightblue ;
+    border-radius: 25px;
+    color:black;
 }
-
+.serviceCard p {
+    font-weight: bold;
+}
+.serviceCard img{
+    position: absolute;
+    bottom: 0px;
+    left: 1px;
+    width: 75px;
+    height: 75px;
+}
