--- a/src/ui/header.module.css
+++ b/src/ui/header.module.css
@@ -1,9 +1,12 @@
+header{
+  height: 150px;
+  background-color: lightblue;
+}
 .upperbar {
   display: flex;
   justify-content: space-around;
   padding: 15px;
-  height: 50px;
-  background-color: lightblue;
+ 
 }
 .logo {
   background-color: aqua;
@@ -15,7 +18,7 @@
   height: 75px;
 }
 .navBar {
-  margin-top: 50px;
+  margin-top: -20px;
   display: flex;
   justify-content: center;
   text-transform: uppercase;
@@ -26,6 +29,8 @@
   margin: 0 auto 0 auto;
 }
 .navBar ul li {
+  margin-top: 20px;
   margin-left: 10px;
   list-style-type: none;
+  text-decoration: underline;
 }
