--- a/src/ui/header.module.css
+++ b/src/ui/header.module.css
@@ -1,5 +1,6 @@
-header {
-  height: 700px;
+.mainHeader {
+  position: relative;
+  height: 100vh;
   color: var(--main-color);
   background-image: url('../img/background.jpeg');
   background-position: none;
@@ -9,7 +10,9 @@ header {
 .upperbar {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   align-items: center;
+  text-align: center;
   padding: 15px;
   font-size: 30px;
   font-weight: bold;
@@ -19,30 +22,51 @@ header {
 }
 .logoImg {
   margin-top: -10px;
-  border-radius: 50px;
+  border-radius: 100%;
   width: 155px;
   height: 155px;
 }
+.centName{
+  font-size: 100px;
+  text-transform: uppercase;text-shadow: 2px 2px white;
+}
+.centAbout{
+  text-shadow: 1px 1px white;
+}
+.contacsQuick {
+  position: absolute;
+  bottom:40px;
+  text-align: center;
+  padding: 5px;
+  text-transform: uppercase;
+  color: white;
+  text-shadow: 1px 1px black;
+  font-size: 50px;
+}
 .navBar {
- position: absolute;
- bottom: 1px;
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
   padding-top: 15px;
   display: flex;
   justify-content: center;
   text-transform: uppercase;
   font-size: 35px;
-  background-color: rgb(239, 239, 240, 0.5);
+  background-color: white;
 }
 .navBar ul {
   display: flex;
   flex-direction: row;
   margin: 0 auto 0 auto;
+  
 }
 .navBar ul li {
   margin-top: -10px;
   margin-left: 10px;
   list-style-type: none;
-  text-decoration: underline;
+  
   margin-right: 25px;
   font-weight: bold;
+  
+  
 }
