--- a/src/components/third-section.module.css
+++ b/src/components/third-section.module.css
@@ -1,26 +1,34 @@
-.mainSec{
-padding-top: 30px;
-    background-color: lightblue;
-    text-align: center;
+.mainSec {
+  padding-top: 30px;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(0, 212, 255, 1) 37%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  text-align: center;
+  padding: 20px;
 }
-.mainSec img{
-width: 300px;
-height: 300px;
-border-radius: 25px;
+.mainSec img {
+  width: 300px;
+  height: 300px;
+  border: 3px solid lightblue;
 }
-.sectionText{
-    
-    font-size: 30px;
+.sectionText {
+  font-size: 35px;
+  font-weight: bold;
 }
-.wrapperone{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
+.wrapperone {
+  display: flex;
+  margin-top: 100px;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
-.wrappertwo{
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
+.wrappertwo {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
 }
